Update docker-entrypoint.sh with new Java Options